# ysk_lockdown

./: README.md  README.rst  boot_django.py  makemigrations.py  set.cfg  setup.cfg
dj_lockdown/: db.sqlite3  manage.py  requirements.txt
dj_lockdown/dj_lockdown/: settings.py  urls.py  wsgi.py
lockdown/: admin.py  middleware.py  models.py
lockdown/migrations/: 0001_initial.py
