# setup.cfg

[metadata]

name = ysk-django-lockdown

version = 1.0

description = Django app with user lock down

long_description = file:README.rst

url = https://github.com/santhosh432/ysk_lockdown

license = MIT

classifiers =

    Development Status :: 4 - Beta

    Environment :: Web Environment

    Intended Audience :: Developers

    License :: OSI Approved :: MIT License

    Operating System :: Ubuntu Independent

    Programming Language :: Python :: 3 :: Only

    Programming Language :: Python :: 3.5

    Programming Language :: Python :: Implementation :: CPython

    Topic :: Software Development :: Libraries :: Application Frameworks

    Topic :: Software Development :: Libraries :: Python Modules


[options]

include_package_data = true

python_requires = >=3.5

setup_requires =

    setuptools >= 18.0

install_requires =

    Django>=1.11